--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 
     <!-- Carousel Start -->
-    <div class="container-fluid p-0 pb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid p-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="owl-carousel header-carousel position-relative">
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-2.jpg'>">
                 <img class="img-fluid" src="img/carousel-2.jpg" alt="">
@@ -173,8 +173,6 @@
             </div>
         </div>
     </div>
-    <!-- Carousel End -->
-
 
     <!-- Facts Start -->
     <!-- <div class="container-xxl py-5">
@@ -225,7 +223,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h4 class="section-title">About Us</h4>
-                    <h1 class="display-5 mb-4">A Creative Architecture Agency For Your Dream Home</h1>
+                    <h1 class="display-5 mb-4">A Creative Fenestration Company For Your Dream Project</h1>
                     <p>ALECO By Eco doors and windows manufactures Aluminium/Upvc doors and windows, internal
                         partitions, wardrobe shutters. We are serving in industry from last one decade.</p>
                     <p class="mb-4">Registered in 2016, ECO Doors & Windows has made a name for itself in the list of
@@ -249,6 +247,22 @@
     </div>
     <!-- About End -->
 
+    <!-- Carousel End -->
+    <div class="row-cus">
+        <div class="container">
+            <section class="customer-logos slider">
+                <div class="slide"><img src="./img/clients/image1.png"></div>
+                <div class="slide"><img src="./img/clients/image2.png"></div>
+                <div class="slide"><img src="./img/clients/image3.png"></div>
+                <div class="slide"><img src="./img/clients/image4.png"></div>
+                <div class="slide"><img src="./img/clients/image5.png"></div>
+                <div class="slide"><img src="./img/clients/image6.png"></div>
+                <div class="slide"><img src="./img/clients/image7.png"></div>
+                <div class="slide"><img src="./img/clients/image8.png"></div>
+            </section>
+        </div>
+    </div>
+
 
     <!-- Service Start -->
     <div class="container-xxl py-5">
@@ -266,7 +280,7 @@
                             <h3 class="mb-3">Architecture</h3>
                             <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam
                                 stet diam sed stet.</p>
-                            <a class="btn" href="">Read More</a>
+                            <a class="btn" href="./">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -278,7 +292,7 @@
                             <h3 class="mb-3">3D Animation</h3>
                             <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam
                                 stet diam sed stet.</p>
-                            <a class="btn" href="">Read More</a>
+                            <a class="btn" href="./">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -290,7 +304,7 @@
                             <h3 class="mb-3">House Planning</h3>
                             <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam
                                 stet diam sed stet.</p>
-                            <a class="btn" href="">Read More</a>
+                            <a class="btn" href="./">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -302,7 +316,7 @@
                             <h3 class="mb-3">Interior Design</h3>
                             <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam
                                 stet diam sed stet.</p>
-                            <a class="btn" href="">Read More</a>
+                            <a class="btn" href="./">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -314,7 +328,7 @@
                             <h3 class="mb-3">Renovation</h3>
                             <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam
                                 stet diam sed stet.</p>
-                            <a class="btn" href="">Read More</a>
+                            <a class="btn" href="./">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -326,7 +340,7 @@
                             <h3 class="mb-3">Construction</h3>
                             <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam
                                 stet diam sed stet.</p>
-                            <a class="btn" href="">Read More</a>
+                            <a class="btn" href="./">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -513,8 +527,8 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h4 class="section-title">Team Members</h4>
-                <h1 class="display-5 mb-4">We Are Creative Architecture Team For Your Dream Home</h1>
+                <h4 class="section-title">Meet the executives</h4>
+                <h1 class="display-5 mb-4">The Entrepreneurs Behind The Excellence</h1>
             </div>
             <div class="row g-0 team-items">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -784,8 +798,16 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-
+    <a href="https://wa.me/917947129016?text=Hey!%20I%20would%20like%20to%20know%20more%20about%20your%20services."
+        class="btn btn-lg btn-primary btn-lg-square back-to-top"><img src="./img/whatsapp-aleco-windows-amritsar.png"
+            alt="aleco-whatsapp" /></a>
+    <div id="wa-box" class="wa-float back-to-top">
+        <i onclick="close()" class="bi bi-x"></i>
+        <p>Let's chat about your dream project!</p>
+        <a href="https://wa.me/917947129016?text=Hey!%20I%20would%20like%20to%20know%20more%20about%20your%20services.">
+            Chat Now
+        </a>
+    </div>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -807,8 +829,42 @@
         })();
     </script>
 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./js/slick.min.js" type="text/javascript" charset="utf-8"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.customer-logos').slick({
+                slidesToShow: 6,
+                slidesToScroll: 1,
+                autoplay: true,
+                autoplaySpeed: 1000,
+                arrows: false,
+                dots: false,
+                pauseOnHover: false,
+                responsive: [{
+                    breakpoint: 768,
+                    settings: {
+                        slidesToShow: 4
+                    }
+                }, {
+                    breakpoint: 520,
+                    settings: {
+                        slidesToShow: 3
+                    }
+                }]
+            });
+        });
+    </script>
+
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <script>
+        function close() {
+            document.getElementById("wa-box").style.display = "none";
+        }
+    </script>
 </body>
 
 </html>
